--- a/src/App.css
+++ b/src/App.css
@@ -7,17 +7,18 @@
     justify-content: center;
     background: #00000059;
 }
+/* body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} */
 
 .cardContainer{
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-content: center;
     justify-content: center;
     align-items: center;
-}
-
-.css-1spm653-MuiPaper-root-MuiCard-root{
-    box-shadow: 0px 0px 10px grey;
 }
